--- a/PR176-AsyncTaskLoader/app/src/main/AndroidManifest.xml
+++ b/PR176-AsyncTaskLoader/app/src/main/AndroidManifest.xml
@@ -19,10 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AlumnoActivity" android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+        <activity
+            android:name=".AlumnoActivity"
+            android:label="@string/agregar_alumno">
         </activity>
     </application>
 
