--- a/PR143-LocationAPI/app/build.gradle
+++ b/PR143-LocationAPI/app/build.gradle
@@ -1,13 +1,16 @@
 apply plugin: 'com.android.application'
 
+def support_library_version = "23.3.0"
+def play_services_version = "8.4.0"
+
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr140"
         minSdkVersion 14
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -21,6 +24,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.google.android.gms:play-services:7.5.0'
+    compile "com.android.support:appcompat-v7:${support_library_version}"
+    compile "com.google.android.gms:play-services:${play_services_version}"
 }
