--- a/PR143-LocationAPI/app/src/main/AndroidManifest.xml
+++ b/PR143-LocationAPI/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:theme="@style/AppTheme" >
 
         <!-- Para la versión de Google Play Services -->
-        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <activity
             android:name=".MainActivity"
