--- a/PR011-ListViewSimple/app/build.gradle
+++ b/PR011-ListViewSimple/app/build.gradle
@@ -1,8 +1,10 @@
 apply plugin: 'com.android.application'
 
+def support_library_version = "23.3.0"
+
 android {
     compileSdkVersion 23
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr011"
@@ -22,5 +24,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile "com.android.support:appcompat-v7:${support_library_version}"
 }
