--- a/PR011-ListViewSimple/app/src/main/AndroidManifest.xml
+++ b/PR011-ListViewSimple/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="es.iessaladillo.pedrojoya.pr011" >
+          xmlns:tools="http://schemas.android.com/tools"
+          package="es.iessaladillo.pedrojoya.pr011" >
 
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:allowBackup="false" >
+        android:allowBackup="false"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
