--- a/PR048-DialogFragment/app/src/main/AndroidManifest.xml
+++ b/PR048-DialogFragment/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="es.iessaladillo.pedrojoya.pr048" >
+          xmlns:tools="http://schemas.android.com/tools"
+          package="es.iessaladillo.pedrojoya.pr048" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -7,7 +8,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:allowBackup="false" >
+        android:allowBackup="false"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name="es.iessaladillo.pedrojoya.pr048.actividades.MainActivity"
             android:label="@string/title_activity_main" >
