--- a/PR049-FragmentTransaction/app/src/main/AndroidManifest.xml
+++ b/PR049-FragmentTransaction/app/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="es.iessaladillo.pedrojoya.pr049" >
+          xmlns:tools="http://schemas.android.com/tools"
+          package="es.iessaladillo.pedrojoya.pr049" >
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name="es.iessaladillo.pedrojoya.pr049.actividades.MainActivity"
             android:label="@string/app_name">
@@ -18,7 +20,8 @@
         <activity
             android:name="es.iessaladillo.pedrojoya.pr049.actividades.DetalleActivity"
             android:label="@string/title_activity_detalle"
-            android:parentActivityName=".actividades.MainActivity">
+            android:parentActivityName=".actividades.MainActivity"
+            tools:ignore="UnusedAttribute">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".actividades.MainActivity" />
