--- a/PR064-PreferenceFragment/app/src/main/AndroidManifest.xml
+++ b/PR064-PreferenceFragment/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="es.iessaladillo.pedrojoya.pr064" >
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name="es.iessaladillo.pedrojoya.pr064.actividades.MainActivity"
             android:label="@string/app_name" >
@@ -17,7 +19,8 @@
         <activity
             android:name="es.iessaladillo.pedrojoya.pr064.actividades.PreferenciasActivity"
             android:label="@string/title_activity_preferencias"
-            android:parentActivityName=".actividades.MainActivity" >
+            android:parentActivityName=".actividades.MainActivity"
+            tools:ignore="UnusedAttribute">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".actividades.MainActivity" />
