--- a/PR082-VolleyString/app/build.gradle
+++ b/PR082-VolleyString/app/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
-def support_library_version = '23.3.0'
+def support_library_version = "23.3.0"
+def volley_version = "1.0.0"
+def butterknife_version = "8.0.0"
+
 
 android {
     compileSdkVersion 23
@@ -25,6 +29,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:${support_library_version}"
-    compile 'com.android.volley:volley:1.0.0'
-    compile 'com.jakewharton:butterknife:7.0.1'
+    compile "com.android.volley:volley:${volley_version}"
+    compile "com.jakewharton:butterknife:${butterknife_version}"
+    apt "com.jakewharton:butterknife-compiler:${butterknife_version}"
 }
