--- a/PR083-VolleyJSON/app/build.gradle
+++ b/PR083-VolleyJSON/app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
 
 def support_library_version = '23.3.0'
+def volley_version = '1.0.0'
+def gson_version = '2.6.2'
+def picasso_version = '2.5.2'
 
 android {
     compileSdkVersion 23
@@ -27,7 +30,7 @@ dependencies {
     compile "com.android.support:cardview-v7:${support_library_version}"
     compile "com.android.support:recyclerview-v7:${support_library_version}"
     compile "com.android.support:design:${support_library_version}"
-    compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.volley:volley:1.0.0'
+    compile "com.google.code.gson:gson:${gson_version}"
+    compile "com.squareup.picasso:picasso:${picasso_version}"
+    compile "com.android.volley:volley:${volley_version}"
 }
