--- a/PR095-DownloadManager/app/src/main/AndroidManifest.xml
+++ b/PR095-DownloadManager/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="es.iessaladillo.pedrojoya.pr095" >
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -10,7 +11,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name=".actividades.MainActivity"
             android:label="@string/app_name" >
