--- a/PR121-FaceCrop/app/build.gradle
+++ b/PR121-FaceCrop/app/build.gradle
@@ -1,13 +1,16 @@
 apply plugin: 'com.android.application'
 
+def support_library_version = "23.3.0"
+def circleimageview_version = "2.0.0"
+
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr121"
         minSdkVersion 14
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -21,7 +24,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.0'
+    compile "com.android.support:appcompat-v7:${support_library_version}"
+    compile "com.android.support:design:${support_library_version}"
     compile files('libs/FaceCropper-library.jar')
-    compile 'de.hdodenhof:circleimageview:1.2.0'
+    compile "de.hdodenhof:circleimageview:${circleimageview_version}"
 }
