--- a/PR138-Palette/app/build.gradle
+++ b/PR138-Palette/app/build.gradle
@@ -1,13 +1,18 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+
+def support_library_version = "23.3.0"
+def picasso_version = "2.5.2"
+def butterknife_version = "8.0.1"
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr138"
         minSdkVersion 14
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -21,7 +26,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.1'
-    compile 'com.android.support:palette-v7:22.1.1'
-    compile 'com.squareup.picasso:picasso:2.5.0'
+    compile "com.android.support:appcompat-v7:${support_library_version}"
+    compile "com.android.support:palette-v7:${support_library_version}"
+    compile "com.android.support:percent:${support_library_version}"
+    compile "com.squareup.picasso:picasso:${picasso_version}"
+    compile "com.jakewharton:butterknife:${butterknife_version}"
+    apt "com.jakewharton:butterknife-compiler:${butterknife_version}"
 }
