--- a/PR008-RelativeLayout/app/src/main/AndroidManifest.xml
+++ b/PR008-RelativeLayout/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
+        android:icon="@mipmap/ic_launcher"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name="es.iessaladillo.pedrojoya.pr008.MainActivity"
