--- a/PR158-Realm/app/build.gradle
+++ b/PR158-Realm/app/build.gradle
@@ -1,9 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
+apply plugin: 'com.neenbedankt.android-apt'
 
 def support_library_version = "23.3.0"
 def glide_version = "3.7.0"
 def circleimageview_version = "1.2.2"
+def butterknife_version = "8.0.1"
 
 android {
     compileSdkVersion 23
@@ -32,4 +34,6 @@ dependencies {
     compile "com.android.support:recyclerview-v7:${support_library_version}"
     compile "com.github.bumptech.glide:glide:${glide_version}"
     compile "de.hdodenhof:circleimageview:${circleimageview_version}"
+    compile "com.jakewharton:butterknife:${butterknife_version}"
+    apt "com.jakewharton:butterknife-compiler:${butterknife_version}"
 }
