--- a/PR153-DataBindingRecyclerView/app/build.gradle
+++ b/PR153-DataBindingRecyclerView/app/build.gradle
@@ -1,10 +1,12 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.android.databinding'
 
+def support_library_version = "23.4.0"
+def picasso_version = "2.5.2"
+def circleimageview_version = "2.0.0"
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr153"
@@ -19,13 +21,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.android.support:design:23.0.1'
-    compile 'com.android.support:recyclerview-v7:23.0.1'
-    compile 'com.squareup.picasso:picasso:2.5.0'
-    compile 'de.hdodenhof:circleimageview:1.2.2'
+    compile "com.android.support:appcompat-v7:${support_library_version}"
+    compile "com.android.support:design:${support_library_version}"
+    compile "com.android.support:recyclerview-v7:${support_library_version}"
+    compile "com.squareup.picasso:picasso:${picasso_version}"
+    compile "de.hdodenhof:circleimageview:${circleimageview_version}"
 }
