--- a/PR008-RelativeLayout/app/build.gradle
+++ b/PR008-RelativeLayout/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 
-def support_library_version = "23.3.0"
+def support_library_version = "23.4.0"
+def espresso_version = "2.2.2"
+def testrunner_version = "0.5"
 
 android {
     compileSdkVersion 23
@@ -12,6 +14,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -25,5 +28,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:${support_library_version}"
+    androidTestCompile "com.android.support:support-annotations:${support_library_version}"
+    androidTestCompile "com.android.support.test.espresso:espresso-core:${espresso_version}"
+    androidTestCompile "com.android.support.test:runner:${testrunner_version}"
+    androidTestCompile "com.android.support.test:rules:${testrunner_version}"
 }
 
