--- a/PR170-DataBindingBidireccional/app/build.gradle
+++ b/PR170-DataBindingBidireccional/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 
-def support_library_version = "23.3.0"
-
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    //noinspection GroovyAssignabilityCheck
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    //noinspection GroovyAssignabilityCheck
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr170"
@@ -27,7 +27,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile "com.android.support:appcompat-v7:${support_library_version}"
-    compile "com.android.support:design:${support_library_version}"
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
+    compile "com.android.support:design:$rootProject.ext.support_library_version"
+    compile "com.squareup.picasso:picasso:$rootProject.ext.picasso_version"
 }
