--- a/PR170-DataBindingBidireccional/build.gradle
+++ b/PR170-DataBindingBidireccional/build.gradle
@@ -21,3 +21,10 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    compileSdkVersion = 23
+    buildToolsVersion = "23.0.2"
+    support_library_version = "23.4.0"
+    picasso_version = "2.5.2"
+}
