--- a/PR182-FirebaseChat/app/build.gradle
+++ b/PR182-FirebaseChat/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     provided "com.f2prateek.dart:dart-processor:$rootProject.ext.dartVersion"
     compile "com.marlonmafra.android.widget:edittext-password:$rootProject.ext.edittextpasswordVersion"
     compile 'com.github.silvestrpredko:dot-progress-bar:0.1.4@aar'
+    compile "org.greenrobot:eventbus:$rootProject.ext.eventbusVersion"
     // Testing
     testCompile "junit:junit:$rootProject.ext.junitVersion"
     testCompile "org.mockito:mockito-all:$rootProject.ext.mockitoVersion"
