--- a/PR182-FirebaseChat/build.gradle
+++ b/PR182-FirebaseChat/build.gradle
@@ -37,4 +37,5 @@ ext {
     mockitoVersion = "1.10.19"
     hamcrestVersion = "1.3"
     powerMockitoVersion = "1.6.5"
+    eventbusVersion = "3.0.0"
 }
