--- a/PR182-FirebaseChat/app/src/main/AndroidManifest.xml
+++ b/PR182-FirebaseChat/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
         <activity
             android:name=".contacts.ContactsActivity"
-            android:label="@string/app_name"
+            android:label="@string/contacts.contacts"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
