--- a/PR149-TextInputLayout/app/src/main/AndroidManifest.xml
+++ b/PR149-TextInputLayout/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
