--- a/PR184-DAMTwitterClient/app/src/main/AndroidManifest.xml
+++ b/PR184-DAMTwitterClient/app/src/main/AndroidManifest.xml
@@ -2,18 +2,18 @@
 <manifest package="es.iessaladillo.pedrojoya.pr184"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginActivity"
-            android:theme="@style/LoginTheme"
-            android:noHistory="true">
+            android:name=".login.LoginActivity"
+            android:theme="@style/LoginTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -26,6 +26,8 @@
             android:name="io.fabric.ApiKey"
             android:value="c863513fce8fd22b7f46dfae0f2652977fe34dce"/>
         <!-- *** -->
+        <activity android:name=".main.MainActivity">
+        </activity>
     </application>
 
 </manifest>
