--- a/PR119-Almacenamiento/app/build.gradle
+++ b/PR119-Almacenamiento/app/build.gradle
@@ -23,6 +23,10 @@ android {
     }
 }
 
+repositories {
+    maven {url "https://clojars.org/repo/"}
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:${support_library_version}"
