--- a/PR178-ModalBottomSheet/app/build.gradle
+++ b/PR178-ModalBottomSheet/app/build.gradle
@@ -1,17 +1,18 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
-def support_library_version = "23.4.0"
+def support_library_version = "24.2.1"
 def picasso_version = "2.5.2"
-def circleimageview_version = "2.0.0"
+def circleimageview_version = "2.1.0"
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 24
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr178"
         minSdkVersion 14
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -25,6 +26,8 @@ android {
 
     compileOptions {
         encoding "UTF-8"
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
