--- a/PR179-CustomTabs/build.gradle
+++ b/PR179-CustomTabs/build.gradle
@@ -5,7 +5,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'me.tatarka:gradle-retrolambda:3.3.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,9 +19,9 @@ allprojects {
     }
     // Variables globales.
     ext {
-        compileSdkVersion = 23
-        buildToolsVersion = "23.0.2"
-        support_library_version = "23.4.0"
+        compileSdkVersion = 24
+        buildToolsVersion = "23.0.3"
+        support_library_version = "24.2.1"
     }
 }
 
