--- a/PR028-SQLiteLoader/app/build.gradle
+++ b/PR028-SQLiteLoader/app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
 
 def support_library_version = "25.1.0"
+def circleimageview_version = "2.1.0"
+def glide_version = "3.7.0"
+def leakcanary_version = "1.5"
 
 //noinspection GroovyMissingReturnStatement
 android {
@@ -27,6 +30,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:${support_library_version}"
     compile "com.android.support:design:${support_library_version}"
-    compile 'de.hdodenhof:circleimageview:1.2.2'
-    compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile "de.hdodenhof:circleimageview:${circleimageview_version}"
+    compile "com.github.bumptech.glide:glide:${glide_version}"
+    debugCompile "com.squareup.leakcanary:leakcanary-android:${leakcanary_version}"
+    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:${leakcanary_version}"
+    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:${leakcanary_version}"
 }
