--- a/PR028-SQLiteLoader/app/build.gradle
+++ b/PR028-SQLiteLoader/app/build.gradle
@@ -1,10 +1,5 @@
 apply plugin: 'com.android.application'
 
-def support_library_version = "25.1.0"
-def circleimageview_version = "2.1.0"
-def glide_version = "3.7.0"
-def leakcanary_version = "1.5"
-
 //noinspection GroovyMissingReturnStatement
 android {
     compileSdkVersion 25
@@ -28,11 +23,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:appcompat-v7:${support_library_version}"
-    compile "com.android.support:design:${support_library_version}"
-    compile "de.hdodenhof:circleimageview:${circleimageview_version}"
-    compile "com.github.bumptech.glide:glide:${glide_version}"
-    debugCompile "com.squareup.leakcanary:leakcanary-android:${leakcanary_version}"
-    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:${leakcanary_version}"
-    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:${leakcanary_version}"
+    compile "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
+    compile "com.android.support:design:$rootProject.ext.support_library_version"
+    compile "de.hdodenhof:circleimageview:$rootProject.ext.circleimageview_version"
+    compile "com.facebook.stetho:stetho:$rootProject.ext.stetho_version"
+    compile "com.github.bumptech.glide:glide:$rootProject.ext.glide_version"
+    debugCompile "com.squareup.leakcanary:leakcanary-android:$rootProject.ext.leakcanary_version"
+    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.ext.leakcanary_version"
+    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.ext.leakcanary_version"
 }
