--- a/PR028-SQLiteLoader/app/src/main/AndroidManifest.xml
+++ b/PR028-SQLiteLoader/app/src/main/AndroidManifest.xml
@@ -33,8 +33,8 @@
         </activity>
 
         <provider
-            android:name=".proveedores.InstitutoContentProvider"
-            android:authorities="es.iessaladillo.instituto.provider"
+            android:name=".proveedores.DbContentProvider"
+            android:authorities="${applicationId}.provider"
             android:exported="false" >
         </provider>
     </application>
